# cppgit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
benchmark/: CMakeLists.txt
benchmark/src/: bench.cpp  nanobench.cpp
cmake/: CPM.cmake  CompilerWarnings.cmake  PackageProject.cmake  Packing.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake  clang_format.cmake  cmake_uninstall.cmake.in  version.hpp.in
include/cppgit/: exception.hpp  git.hpp  git2api.hpp  global.hpp  repository.hpp  version.hpp
include/modern_cpp_project/: greeter.hpp  version.hpp
src/: CMakeLists.txt  exception.cpp  git.cpp  git2api.cpp  greeter.cpp  repository.cpp
test/: CMakeLists.txt
test/src/: greeter_test.cpp  version_test.cpp
